@@ -24,5 +24,8 @@
     <printer>
       <id>printer/Minolta-magicolor_2400W</id>
     </printer>
+    <printer>
+      <id>printer/KONICA_MINOLTA-magicolor_2400W</id>
+    </printer>
   </printers>
 </driver>
