@@ -95,5 +95,14 @@
     <printer>
       <id>printer/Minolta-PagePro_1400W</id>
     </printer>
+    <printer>
+      <id>printer/KONICA_MINOLTA-PagePro_1300W</id>
+    </printer>
+    <printer>
+      <id>printer/KONICA_MINOLTA-PagePro_1350W</id>
+    </printer>
+    <printer>
+      <id>printer/KONICA_MINOLTA-PagePro_1400W</id>
+    </printer>
   </printers>
 </driver>
