@@ -38,11 +38,26 @@
       <printer>printer/Minolta-PagePro_1400W</printer>
       <arg_defval>ev/min12xxw-Model-1400W</arg_defval>
     </constraint>
+    <constraint sense="true">
+      <driver>min12xxw</driver>
+      <printer>printer/KONICA_MINOLTA-PagePro_1300W</printer>
+      <arg_defval>ev/min12xxw-Model-1300W</arg_defval>
+    </constraint>
+    <constraint sense="true">
+      <driver>min12xxw</driver>
+      <printer>printer/KONICA_MINOLTA-PagePro_1350W</printer>
+      <arg_defval>ev/min12xxw-Model-1350W</arg_defval>
+    </constraint>
+    <constraint sense="true">
+      <driver>min12xxw</driver>
+      <printer>printer/KONICA_MINOLTA-PagePro_1400W</printer>
+      <arg_defval>ev/min12xxw-Model-1400W</arg_defval>
+    </constraint>
   </constraints>
   <enum_vals>
     <enum_val id="ev/min12xxw-Model-1200W">
       <ev_longname>
-        <en>Minolta PagePro 1200W</en>
+        <en>PagePro 1200W</en>
       </ev_longname>
       <ev_shortname>
         <en>1200W</en>
@@ -60,7 +75,7 @@
     </enum_val>
     <enum_val id="ev/min12xxw-Model-1250W">
       <ev_longname>
-        <en>Minolta PagePro 1250W</en>
+        <en>PagePro 1250W</en>
       </ev_longname>
       <ev_shortname>
         <en>1250W</en>
@@ -78,7 +93,7 @@
     </enum_val>
     <enum_val id="ev/min12xxw-Model-1300W">
       <ev_longname>
-        <en>Minolta PagePro 1300W</en>
+        <en>PagePro 1300W</en>
       </ev_longname>
       <ev_shortname>
         <en>1300W</en>
@@ -92,11 +107,15 @@
           <driver>min12xxw</driver>
           <printer>printer/Minolta-PagePro_1300W</printer>
         </constraint>
+        <constraint sense="true">
+          <driver>min12xxw</driver>
+          <printer>printer/KONICA_MINOLTA-PagePro_1300W</printer>
+        </constraint>
       </constraints>
     </enum_val>
     <enum_val id="ev/min12xxw-Model-1350W">
       <ev_longname>
-        <en>Minolta PagePro 1350W</en>
+        <en>PagePro 1350W</en>
       </ev_longname>
       <ev_shortname>
         <en>1350W</en>
@@ -110,11 +129,15 @@
           <driver>min12xxw</driver>
           <printer>printer/Minolta-PagePro_1350W</printer>
         </constraint>
+        <constraint sense="true">
+          <driver>min12xxw</driver>
+          <printer>printer/KONICA_MINOLTA-PagePro_1350W</printer>
+        </constraint>
       </constraints>
     </enum_val>
     <enum_val id="ev/min12xxw-Model-1400W">
       <ev_longname>
-        <en>Minolta PagePro 1400W</en>
+        <en>PagePro 1400W</en>
       </ev_longname>
       <ev_shortname>
         <en>1400W</en>
@@ -127,6 +150,10 @@
         <constraint sense="true">
           <driver>min12xxw</driver>
           <printer>printer/Minolta-PagePro_1400W</printer>
+        </constraint>
+        <constraint sense="true">
+          <driver>min12xxw</driver>
+          <printer>printer/KONICA_MINOLTA-PagePro_1400W</printer>
         </constraint>
       </constraints>
     </enum_val>
