@@ -1,0 +1,33 @@
+<printer id="printer/KONICA_MINOLTA-PagePro_1300W">
+  <make>KONICA MINOLTA</make>
+  <model>PagePro 1300W</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+    <general>
+      <commandset>NA</commandset>
+      <description>KONICA MINOLTA PP1300W</description>
+      <manufacturer>KONICA MINOLTA</manufacturer>
+      <model>PP1300W</model>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>min12xxw</driver>
+  <comments>
+    <en>
+
+     Low cost laser. Does not understand PCL or PostScript.
+
+    </en>
+  </comments>
+</printer>
