@@ -1,0 +1,31 @@
+<printer id="printer/KONICA_MINOLTA-PagePro_1350W">
+  <make>KONICA MINOLTA</make>
+  <model>PagePro 1350W</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+    <usb>
+      <commandset>NA</commandset>
+      <description>KONICA MINOLTA PP1350W</description>
+      <manufacturer>KONICA MINOLTA</manufacturer>
+      <model>PP1350W</model>
+    </usb>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>min12xxw</driver>
+  <comments>
+    <en>
+     Low cost laser.
+    </en>
+  </comments>
+</printer>
