@@ -1,0 +1,65 @@
+<printer id="printer/KONICA_MINOLTA-magicolor_2400W">
+  <make>KONICA MINOLTA</make>
+  <model>magicolor 2400W</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <margins>
+      <general>
+        <unit>mm</unit>
+        <relative />
+        <top>4</top>
+        <left>4</left>
+        <right>4</right>
+        <bottom>4</bottom>
+      </general>
+    </margins>
+  </mechanism>
+  <url>http://printer.konicaminolta.net/products/color/mc2400W/index.asp</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+    <parallel>
+      <commandset>NA</commandset>
+      <description>KONICA MINOLTA mc2400W</description>
+      <manufacturer>KONICA MINOLTA</manufacturer>
+      <model>mc2400W</model>
+    </parallel>
+    <usb>
+      <commandset>NA</commandset>
+      <description>KONICA MINOLTA mc2400W</description>
+      <manufacturer>KONICA MINOLTA</manufacturer>
+      <model>mc2400W</model>
+    </usb>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>m2400w</driver>
+  <comments>
+    <en>
+
+	The Minolta magicolor 2400W is a GDI color laser printer with
+	a 2005 street price of circa $300 USD. This printer is
+	supported by the m2300w open source printer driver.&lt;p&gt;
+
+      Consumables/Refills: Toner Black (4500 prints) - $79
+		Toner Yellow (4500 prints) - $119
+		Toner Magenta (4500 prints) - $119
+		Toner Cyan (4500 prints) - $119
+		Waste Toner Box (25000 prints) - $19
+		OPC Drum Catridge (45000 prints) - $149 Part numbers: 1710517-005, 
+	    1710517-006, 
+	    1710517-007, 
+	    1710517-008, 
+	    1710522-001, 
+	    1710520-001&lt;p&gt;
+
+      </en>
+  </comments>
+</printer>
