@@ -1,5 +1,14 @@
 2011-12-04  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* printer/KONICA_MINOLTA-PagePro_1300W.xml,
+	  printer/KONICA_MINOLTA-PagePro_1350W.xml,
+	  printer/KONICA_MINOLTA-PagePro_1400W.xml,
+	  printer/KONICA_MINOLTA-magicolor_2300W.xml,
+	  printer/KONICA_MINOLTA-magicolor_2400W.xml, driver/m2300w.xml,
+	  driver/m2400w.xml, driver/min12xxw.xml, opt/min12xxw-Model.xml:
+	  Added the KONICA MINOLTA versions of several Minolta laser printers
+	  to make them correctly auto-detected for everyone (Ubuntu bug
+	  889811).
 	* printer/Xerox-Phaser_6180DN.xml, printer/Xerox-Phaser_6180MFP-D.xml:
 	  Make sure all Xerox Phaser 6180 printers have correct declaration
 	  of mechanisms, in particular of color capabilities (Debian bug
